crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__markup_as_block_tail.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "{\n    let x = 1\n    <p>{x}</p>\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Block(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 2,
                },
            },
            value: Block {
                stmts: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 14,
                            },
                        },
                        value: Let(
                            LetDecl {
                                pattern: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 10,
                                        },
                                    },
                                    value: Var(
                                        "x",
                                    ),
                                },
                                annotation: None,
                                value: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 14,
                                        },
                                    },
                                    value: Number(
                                        NumberLit {
                                            value: 1.0,
                                            text: "1",
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                ],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 15,
                            },
                        },
                        value: Markup(
                            Element(
                                Element {
                                    name: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 6,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 7,
                                            },
                                        },
                                        value: Tag(
                                            "p",
                                        ),
                                    },
                                    attrs: [],
                                    children: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 8,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 11,
                                                },
                                            },
                                            value: Hole(
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 10,
                                                        },
                                                    },
                                                    value: Var(
                                                        "x",
                                                    ),
                                                },
                                            ),
                                        },
                                    ],
                                    self_closing: false,
                                },
                            ),
                        ),
                    },
                ),
            },
        },
    ),
}
