crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__multiline_prose_folds_lines.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>\n  Hello\n\n  world\n</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 5,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 5,
                                column: 1,
                            },
                        },
                        value: Text(
                            "Hello world",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
