crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__pre_preserves_blank_lines_and_nested_text.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<pre>\n  A\n\n <b> B\n C </b>\n</pre>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 7,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 5,
                        },
                    },
                    value: Tag(
                        "pre",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 4,
                                column: 2,
                            },
                        },
                        value: Text(
                            "\n  A\n\n ",
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 2,
                            },
                            end: Position {
                                line: 5,
                                column: 8,
                            },
                        },
                        value: Element(
                            Element {
                                name: Located {
                                    region: Region {
                                        start: Position {
                                            line: 4,
                                            column: 3,
                                        },
                                        end: Position {
                                            line: 4,
                                            column: 4,
                                        },
                                    },
                                    value: Tag(
                                        "b",
                                    ),
                                },
                                attrs: [],
                                children: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 4,
                                                column: 5,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 4,
                                            },
                                        },
                                        value: Text(
                                            " B\n C ",
                                        ),
                                    },
                                ],
                                self_closing: false,
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 8,
                            },
                            end: Position {
                                line: 6,
                                column: 1,
                            },
                        },
                        value: Text(
                            "\n",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
