crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__text_at_word_after_space.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p> @iffy</p>"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Markup(
        Element(
            Element {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 2,
                        },
                        end: Position {
                            line: 1,
                            column: 3,
                        },
                    },
                    value: Tag(
                        "p",
                    ),
                },
                attrs: [],
                children: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 10,
                            },
                        },
                        value: Text(
                            " @iffy",
                        ),
                    },
                ],
                self_closing: false,
            },
        ),
    ),
}
